# trickycpp

./: CMakeLists.txt  README.md
src/: check_equal_without_relational_operator.cpp  divide_by_four.cpp  endian_computer.cpp  max_and_min.cpp  max_value_of_unsigned_int.cpp  print_nos_without_semicolon.cpp  sum_of_nos_without_addition_operator.cpp  swap_without_extra.cpp  verify_if_block.cpp
